// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack aligns items 1`] = `
<div
  className="box"
>
  <div
    className="box itemsEnd justifyCenter xsDirectionColumn xsDisplayFlex"
  >
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Stack justifies content 1`] = `
<div
  className="box"
>
  <div
    className="box itemsStart justifyAround xsDirectionColumn xsDisplayFlex"
  >
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Stack renders 1`] = `
<div
  className="box"
>
  <div
    className="box itemsStart justifyCenter xsDirectionColumn xsDisplayFlex"
  >
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
    <div
      className="box"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Stack renders with specified gap 1`] = `
<div
  className="box marginBottomN4 marginTopN4"
>
  <div
    className="box itemsStart justifyCenter xsDirectionColumn xsDisplayFlex"
  >
    <div
      className="box paddingY4"
    >
      <div />
    </div>
    <div
      className="box paddingY4"
    >
      <div />
    </div>
    <div
      className="box paddingY4"
    >
      <div />
    </div>
    <div
      className="box paddingY4"
    >
      <div />
    </div>
  </div>
</div>
`;
